tests/ui/ferrocene/compiler-arguments/upper_l/upper_l_dependency_no-dir.rs
//@ check-fail
//@ compile-flags: -L dependency=
//~? ERROR empty search path

fn main() {}

// ferrocene-annotations: um_rustc_L
